# medalware/auth.js
@@ -2,6 +2,17 @@ const jwt = require('jsonwebtoken');
 const Response = require('../utils/Response/response')
 const userController = require('../api/Users/UserController');
 exports.authenticate=(req, res, next)=> {
+  /*
+  #swagger.responses[fail_auth] = {
+            description: 'Please Login for Access',
+            schema: { 
+                  $status: "fail",
+                  $statusCode: 401,
+                  $message: "Unauthorized"
+             }
+    }
+ 
+    */
     const token = req.session.token;
     if (!token) {
         res.send(Response.getUnauthorizedRequest("Unauthorized")) 
