# swagger/swagger-output.json
@@ -32,43 +32,97 @@
             "name": "api_key",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "type": "string",
-                  "example": "Jhon Doe"
-                },
-                "author": {
-                  "type": "string",
-                  "example": "Applet"
-                },
-                "year": {
-                  "type": "number",
-                  "example": 2023
-                },
-                "pages": {
-                  "type": "number",
-                  "example": 129
-                }
-              },
-              "required": [
-                "title",
-                "author",
-                "year",
-                "pages"
-              ]
-            }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Get a book by its id",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 200
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "63b7fc6903a1632296ce04de"
+                    },
+                    "title": {
+                      "type": "string",
+                      "example": "english"
+                    },
+                    "author": {
+                      "type": "string",
+                      "example": "ahtazaz"
+                    },
+                    "year": {
+                      "type": "number",
+                      "example": 2023
+                    },
+                    "pages": {
+                      "type": "number",
+                      "example": 12
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2023-01-06T10:48:09.103Z"
+                    }
+                  },
+                  "required": [
+                    "_id",
+                    "title",
+                    "author",
+                    "year",
+                    "pages",
+                    "createdAt"
+                  ]
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "data"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "fail_auth": {
+            "description": "Please Login for Access",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "fail"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 401
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Unauthorized"
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "fail": {
             "description": "API key Validation Error",
@@ -144,43 +198,82 @@
             "name": "api_key",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "type": "string",
-                  "example": "Jhon Doe"
-                },
-                "author": {
-                  "type": "string",
-                  "example": "Applet"
-                },
-                "year": {
-                  "type": "number",
-                  "example": 2023
-                },
-                "pages": {
-                  "type": "number",
-                  "example": 129
-                }
-              },
-              "required": [
-                "title",
-                "author",
-                "year",
-                "pages"
-              ]
-            }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Book successfully added!",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Book successfully deleted!"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "acknowledged": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "deletedCount": {
+                      "type": "number",
+                      "example": 1
+                    }
+                  },
+                  "required": [
+                    "acknowledged",
+                    "deletedCount"
+                  ]
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message",
+                "data"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "fail_auth": {
+            "description": "Please Login for Access",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "fail"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 401
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Unauthorized"
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "fail": {
             "description": "API key Validation Error",
@@ -292,7 +385,98 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Book updated by its id",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Book updated!"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "63b7fc6903a1632296ce04de"
+                    },
+                    "title": {
+                      "type": "string",
+                      "example": "english"
+                    },
+                    "author": {
+                      "type": "string",
+                      "example": "ahtazaz"
+                    },
+                    "year": {
+                      "type": "number",
+                      "example": 2023
+                    },
+                    "pages": {
+                      "type": "number",
+                      "example": 12
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2023-01-06T10:48:09.103Z"
+                    }
+                  },
+                  "required": [
+                    "_id",
+                    "title",
+                    "author",
+                    "year",
+                    "pages",
+                    "createdAt"
+                  ]
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message",
+                "data"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "fail_auth": {
+            "description": "Please Login for Access",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "fail"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 401
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Unauthorized"
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "fail": {
             "description": "API key Validation Error",
@@ -364,43 +548,105 @@
             "name": "api_key",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "title": {
-                  "type": "string",
-                  "example": "Jhon Doe"
-                },
-                "author": {
-                  "type": "string",
-                  "example": "Applet"
-                },
-                "year": {
-                  "type": "number",
-                  "example": 2023
-                },
-                "pages": {
-                  "type": "number",
-                  "example": 129
-                }
-              },
-              "required": [
-                "title",
-                "author",
-                "year",
-                "pages"
-              ]
-            }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "list all books",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "list all books"
+                },
+                "data": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "example": "63b7fc6903a1632296ce04de"
+                      },
+                      "title": {
+                        "type": "string",
+                        "example": "english"
+                      },
+                      "author": {
+                        "type": "string",
+                        "example": "ahtazaz"
+                      },
+                      "year": {
+                        "type": "number",
+                        "example": 2023
+                      },
+                      "pages": {
+                        "type": "number",
+                        "example": 12
+                      },
+                      "createdAt": {
+                        "type": "string",
+                        "example": "2023-01-06T10:48:09.103Z"
+                      }
+                    },
+                    "required": [
+                      "_id",
+                      "title",
+                      "author",
+                      "year",
+                      "pages",
+                      "createdAt"
+                    ]
+                  }
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message",
+                "data"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "fail_auth": {
+            "description": "Please Login for Access",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "fail"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 401
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Unauthorized"
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "fail": {
             "description": "API key Validation Error",
@@ -506,7 +752,98 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "Book successfully added!",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 200
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Book successfully added!"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "63b7fc6903a1632296ce04de"
+                    },
+                    "title": {
+                      "type": "string",
+                      "example": "english"
+                    },
+                    "author": {
+                      "type": "string",
+                      "example": "ahtazaz"
+                    },
+                    "year": {
+                      "type": "number",
+                      "example": 2023
+                    },
+                    "pages": {
+                      "type": "number",
+                      "example": 12
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2023-01-06T10:48:09.103Z"
+                    }
+                  },
+                  "required": [
+                    "_id",
+                    "title",
+                    "author",
+                    "year",
+                    "pages",
+                    "createdAt"
+                  ]
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message",
+                "data"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "fail_auth": {
+            "description": "Please Login for Access",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "fail"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 401
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Unauthorized"
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
           },
           "fail": {
             "description": "API key Validation Error",
@@ -641,8 +978,8 @@
               }
             }
           },
-          "2000": {
-            "description": "API key Validation Error",
+          "2001": {
+            "description": "User Not Found",
             "schema": {
               "type": "object",
               "properties": {
@@ -657,6 +994,34 @@
                 "message": {
                   "type": "string",
                   "example": "User Not Found"
+                }
+              },
+              "required": [
+                "status",
+                "statusCode",
+                "message"
+              ],
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "fail_auth": {
+            "description": "Please Login for Access",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "fail"
+                },
+                "statusCode": {
+                  "type": "number",
+                  "example": 401
+                },
+                "message": {
+                  "type": "string",
+                  "example": "Unauthorized"
                 }
               },
               "required": [
